--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d dist",
     "start": "npm install && npx nodemon -e js,html,css"
   },
   "repository": {
