Add .run directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Local files
 
-# ...
+.run
 
 # ______________________________________________________________________________________________________________________
 
