--- a/fly.toml
+++ b/fly.toml
@@ -6,7 +6,7 @@ kill_timeout = 5
 processes = []
 
 [build]
-  builder = "heroku/builder:latest"
+  builder = "heroku/buildpacks:24"
 
 [env]
   PORT = "8080"
